--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                 <div class="fields">
                     <div class="form-group has-feedback form-group-name">
                     <label for="name"><b>Name: </b> </label>
-                    <input type="text" id="name" value="" placeholder=" ">
+                    <input type="text" class="name" value="<%= name %>">
                     <span class="dot">*</span>
                         <small class="help-block"></small>
                     </div>
                     <div class="form-group has-feedback form-group-phone">
                     <label for="phone"><b>Phone: </b> </label>
-                    <input type="text" id="phone" value="" placeholder=" ">
+                    <input type="text" class="phone" value="<%= phone %>">
                     <span class="dot">*</span>
                         <small class="help-block"></small>
                     </div>
                     <div class="form-group has-feedback form-group-group">
                     <label for="group"><b>Group: </b> </label>
-                    <input type="text" id="group" value="" placeholder=" ">
+                    <input type="text" class="group" value="<%= group %>" placeholder=" ">
                     <span class="dot">*</span>
                         <small class="help-block"></small>
                     </div>
