Debug home route, add cancel and return buttons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         <div class="main-container">
         </div>
     </div>
+</div>
+
+<script type="layout" id="main">
+<div class="list">
+list will be here
+</div>
+
+
+</script>
+
 
      <script type="text/template" id="tpl-contacts">
          <input type="text" class="contact-searchValue" value="" placeholder="Search contact ">
@@ -61,6 +71,7 @@
                     </div>
                 </div>
                 <input type="submit" name="button" id="submitForm" value= "Add">
+                    <input type="submit" name="button" id="close-form" value= "Cancel">
                 </div>
             </form>
         </div>
@@ -84,6 +95,8 @@
         <button class="cancel">Cancel</button>
     </form>
 </script>
+<div class="footer text-center">
+    <p>footer</p>
 </div>
 
 <div id="pages"></div>
