--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@ list will be here
          </div>
          <div class="empty-contacts-placeholder"></div>
          <div class="empty-search-contacts-placeholder"></div>
+
+         <div class="pages">
+             <input type="submit" name="button" id="next" value= "Next">
+             <input type="submit" name="button" id="prev" value= "Prev">
+         </div>
      </script>
 
     <script id="newContactTemp" type="text/template">
