Debug home route, add cancel and return buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <script type="text/template" id="headerTemp">
 
-    <a id="showForm" href="#newContact" class="showFormToAdd">Add new contact header</a>
+    <a id="showForm" href="#newContact" class="showFormToAdd">Add new contact</a>
     <input type="text" class="contact-searchValue" value="" placeholder="Search contact header">
     <input type="submit" name="button" id="submitSearch" value= "Find!">
     <!-- -->
@@ -37,6 +37,7 @@ list will be here
 </div>
 </script>
      <script type="text/template" id="tpl-contacts">
+         <a id="showForm" href="#newContact" class="showFormToAdd">Add new contact</a>
          <input type="text" class="contact-searchValue" value="" placeholder="Search contact ">
          <input type="submit" name="button" id="submitSearch" value= "Find!">
          <!-- -->
