--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <title>Contacts</title>
     <link rel="stylesheet" href="app/css/contact.css">
     <link rel="stylesheet" href="app/css/form.css">
+    <link rel="stylesheet" href="app/css/bootstrap.css">
     <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet" />
 </head>
 <body>
 
-<div class="container">
+
     <div class="row">
-        <div class="main-container">
+        <div id="main-container">
+            <div class="container-fluid">
         </div>
     </div>
-</div>
+
 
 <script type="text/template" id="headerTemp">
-
-    <a id="showForm" href="#newContact" class="showFormToAdd">Add new contact</a>
+    <a class="btn btn-info" id="showForm" href="#newContact" role="button">Add new contact</a>
     <input type="text" class="contact-searchValue" value="" placeholder="Search contact header">
     <input type="submit" name="button" id="submitSearch" value= "Find!">
     <!-- -->
@@ -29,27 +30,28 @@
     <div class="empty-search-contacts-placeholderHeader"></div>
 </script>
 
-
-
-<script type="layout" id="main">
-<div class="list">
-list will be here
-</div>
-</script>
      <script type="text/template" id="tpl-contacts">
-         <a id="showForm" href="#newContact" class="showFormToAdd">Add new contact</a>
-         <input type="text" class="contact-searchValue" value="" placeholder="Search contact ">
-         <input type="submit" name="button" id="submitSearch" value= "Find!">
-         <!-- -->
+         <div class="container">
+             <div class="row">
+                 <div class="col-6">
+                     <input type="text" class="contact-searchValue" value="" placeholder="Search contact ">
+                 </div>
+                 <div class="col">
+                     <input type="submit" name="button" class="btn btn-info" id="submitSearch" value= "Find!">
+             </div>
+                 <div class="col">
+                     <a class="btn btn-success" id="showForm" href="#newContact" role="button">Add new contact</a></div>
+                 </div>
+             </div>
          <div class="contacts-container">
              <a id="return" href="#home" class="backFromSearch"> Return</a>
          </div>
          <div class="empty-contacts-placeholder"></div>
          <div class="empty-search-contacts-placeholder"></div>
 
-         <div class="pages">
-             <input type="submit" name="button" id="next" value= "Next">
-             <input type="submit" name="button" id="prev" value= "Prev">
+         <div class="fixed-bottom">
+             <input type="submit" name="button" class="btn btn-success" id="next" value= "Next">
+             <input type="submit" name="button" class="btn btn-success" id="prev" value= "Prev">
          </div>
      </script>
 
@@ -86,75 +88,21 @@ list will be here
     </script>
 
 <script type="text/template" id="tpl-contact">
+    <div class="card">
+        <div class="card-body">
+
     <img src="<%= coverImage %>"/>
     <div id="name"><%= name %></div>
-    <div id="phone"><%= phone %></div>
-    <div id="group"><%= group %></div>
+    <div id="phone">Phone: <%= phone %></div>
+    <div id="group">Group: <%= group %></div>
     <div id="btn">
-        <a id="btns" href="#home/edit/<%- id %>" class="edit"> Edit </a>
-    <button class="delete">Delete</button></div>
-</script>
 
-<script id="contactEditTemplate" type="text/template">
-    <form action="#">
-        <input class="name" value="<%= name %>" />
-        <input class="group" value="<%= group %>" />
-        <input class="phone" value="<%= phone %>" />
-        <button class="save">Save</button>
-        <button class="cancel">Cancel</button>
-    </form>
+        <a class="btn btn-info" id="edit" href="#home/edit/<%- id %>" role="button">Edit</a>
+    <button class="delete btn-danger" id="delete">Delete</button></div>
+        </div>
+    </div>
 </script>
-<div class="footer text-center">
-    <p>footer</p>
 </div>
-
-<div id="pages"></div>
-<footer>
-
-    <script type="text/html" id="tmpClientPagination">
-            <ul class="pagination">
-                <% if (currentPage != 1) { %>
-                <li><a href="#" class="first">&laquo;&laquo;</a></li>
-                <% } else { %>
-                <li class="disabled"><a href="#" class="first">&laquo;&laquo;</a></li>
-                <% } %>
-
-                <% if (currentPage != 1) { %>
-                <li><a href="#" class="prev">&laquo;</a></li>
-                <% } else { %>
-                <li class="disabled"><a href="#" class="prev">&laquo;</a></li>
-                <% } %>
-
-                <% if (leftTruncated) { %>
-                <li class="disabled"><a href="#">...</a></li>
-                <% } %>
-
-                <% _.each(pageSet, function(p) { %>
-                <% if (currentPage == p) { %>
-                <li class="active"><a href="#" class="page"><%- p %></a></li>
-                <% } else { %>
-                <li><a href="#" class="page"><%- p %></a></li>
-                <% } %>
-                <% }); %>
-
-                <% if (rightTruncated) { %>
-                <li class="disabled"><a href="#">...</a></li>
-                <% } %>
-
-                <% if (lastPage != currentPage && lastPage != 0) { %>
-                <li><a href="#" class="next">&raquo;</a></li>
-                <% } else { %>
-                <li class="disabled"><a href="#" class="next">&raquo;</a></li>
-                <% } %>
-
-                <% if (lastPage != currentPage && lastPage != 0) { %>
-                <li><a href="#" class="last">&raquo;&raquo;</a></li>
-                <% } else { %>
-                <li class="disabled"><a href="#" class="last">&raquo;&raquo;</a></li>
-                <% } %>
-            </ul>
-    </script>
-</footer>
 <script data-main="main.js" src="node_modules/requirejs/require.js"></script>
 </body>
 </html>
